Adding webpack and less

--- a/behive/style.less
+++ b/behive/style.less
@@ -3,7 +3,6 @@
     border: 1px solid #ddd;
     border-radius: 16px;
     position: relative;
-
 }
 
 .app-section-form {
@@ -29,44 +28,41 @@
 .spending-category {
     padding: 1rem 0;
     border-bottom: 1px solid #ddd;
+    .form-group:last-of-type {
+        margin-bottom: 0;
+    }
+    .bi-dash-lg {
+        display: none;
+    }
+    &.open {
+        .bi-dash-lg {
+            display: inline;
+        }
+        .bi-plus-lg {
+            display: none;
+        }
+        .spending-category-body {
+            display: block;
+        }
+    }
+    &:last-of-type {
+        border-bottom: none;
+    }
 }
 
-.spending-category .form-group:last-of-type {
-    margin-bottom: 0;
-}
-
-.spending-category:last-of-type {
-    border-bottom: none;
-}
 
 .spending-category-title {
     font-size: 20px;
     cursor: pointer;
     padding: 0;
     align-items: center;
-}
-
-.spending-category .bi-dash-lg {
-    display: none;
-}
-
-.spending-category-title h3 {
-    margin: 0;
-    font-size: inherit;
+    h3 {
+        margin: 0;
+        font-size: inherit;
+    }
 }
 
 .spending-category-body {
     display: none;
 }
 
-.spending-category.open .bi-dash-lg {
-    display: inline;
-}
-
-.spending-category.open .bi-plus-lg {
-    display: none;
-}
-
-.spending-category.open .spending-category-body {
-    display: block;
-}
