Adding calcTotals function.

--- a/behive/style.less
+++ b/behive/style.less
@@ -48,6 +48,10 @@
     &:last-of-type {
         border-bottom: none;
     }
+    &.active-fields {
+        padding: 0;
+        border-bottom: none;
+    }
 }
 
 
